[wheel]
universal = 1

[metadata]
name = flake8-import-order
version = attr: flake8_import_order.__about__.__version__
author = Alex Stapleton
author_email = alexs@prol.etari.at
maintainer = Phil Jones
maintainer_email = philip.graham.jones+flake8-import@gmail.com
license = LGPLv3
description = Flake8 and pylama plugin that checks the ordering of import statements.
url = https://github.com/PyCQA/flake8-import-order
long_description = file: README.rst
classifiers =
    Framework :: Flake8
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: LGPL-3.0-only
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Operating System :: OS Independent

[options]
py_modules = flake8_import_order
packages = find:
zip_safe = False
install_requires =
    pycodestyle
    setuptools
tests_require =
    pytest
    flake8
    pycodestyle
    pylama

[check-manifest]
ignore = tox.ini

[flake8]
exclude = .tox,*.egg,tests/test_cases/
select = E,W,F,N,I
application-import-names = flake8_import_order,tests

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
flake8_import_order.styles =
    cryptography = flake8_import_order.styles:Cryptography
    google = flake8_import_order.styles:Google
    pep8 = flake8_import_order.styles:PEP8
    smarkets = flake8_import_order.styles:Smarkets
    appnexus = flake8_import_order.styles:AppNexus
    edited = flake8_import_order.styles:Edited
    pycharm = flake8_import_order.styles:PyCharm
flake8.extension =
    I = flake8_import_order.flake8_linter:Linter
pylama.linter =
    import_order = flake8_import_order.pylama_linter:Linter

[coverage:run]
source = flake8_import_order

[coverage:report]
show_missing = True
