[metadata]
name = flake8_import_order
version = attr: flake8_import_order.__about__.__version__
description = Flake8 and pylama plugin that checks the ordering of import statements.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/PyCQA/flake8-import-order
author = Alex Stapleton
author_email = alexs@prol.etari.at
maintainer = Phil Jones
maintainer_email = philip.graham.jones+flake8-import@gmail.com
license = LGPLv3
classifiers =
    Development Status :: 4 - Beta
    Framework :: Flake8
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
py_modules = flake8_import_order
install_requires =
    pycodestyle
    setuptools
python_requires = >=3.9
python_requires > = 3.9
tests_require =
    pytest
    flake8
    pycodestyle
    pylama
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
flake8.extension =
    I = flake8_import_order.flake8_linter:Linter
flake8_import_order.styles =
    cryptography = flake8_import_order.styles:Cryptography
    google = flake8_import_order.styles:Google
    isort = flake8_import_order.styles:ISort
    pep8 = flake8_import_order.styles:PEP8
    smarkets = flake8_import_order.styles:Smarkets
    appnexus = flake8_import_order.styles:AppNexus
    edited = flake8_import_order.styles:Edited
    pycharm = flake8_import_order.styles:PyCharm
pylama.linter =
    import_order = flake8_import_order.pylama_linter:Linter

[check-manifest]
ignore = tox.ini

[flake8]
exclude = .tox,*.egg,tests/test_cases/
select = E,W,F,N,I
ignore = W503
application-import-names = flake8_import_order,tests
max-line-length = 88
max-complexity = 10

[coverage:run]
source = flake8_import_order

[coverage:report]
show_missing = True
